Update footer text

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 
     <div class="page-footer">
       <p class="text-muted text-center">
-        © BitcoinTrezor.com 2013. All rights reserved
+        © BitcoinTrezor.com 2013
       </p>
     </div>
 
