--- a/app/index.html
+++ b/app/index.html
@@ -63,53 +63,23 @@
       </p>
     </div>
 
-    <!-- Feedback form -->
-    <div class="feedbackmodal modal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <form action="post">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title">Webwallet Feedback</h4>
-            </div>
-
-            <div class="modal-body">
-              <div class="form-group">
-                <label class="control-label" for="feedback">Your idea, experience, or a problem:</label>
-                <textarea class="form-control" name="entry.1434484052" id="feedback" required></textarea>
-              </div>
-              <div class="form-group">
-                <label class="control-label" for="email">
-                  If you want, leave your email! We will get back to you.</label>
-                <input type="email" class="form-control" name="entry.1413017719" id="email">
-              </div>
-
-              <p class="text-muted">
-                <strong>Note:</strong>
-                Your feedback is submitted and stored using Google Forms.
-                We don't transmit any information except your feedback, email, and the page URL.
-              </p>
-            </div>
-
-            <div class="modal-footer">
-              <button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-lg btn-primary">Submit</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+    <!-- Feedback modal -->
+    <ng-include src="'views/modal.feedback.html'"></ng-include>
 
     <!-- build:js scripts/libs.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jquery.atmosphere/jquery.atmosphere.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/bitcoinjs-lib/build/bitcoinjs-min.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.js"></script>
     <script src="bower_components/trezor.js/trezor.js"></script>
-    <script src="bower_components/bitcoinjs-lib/build/bitcoinjs-min.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/plugins.js -->
+    <script src="bower_components/angular/angular.js"></script>
+    <!-- angular modules -->
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
+    <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
+    <script src="bower_components/angular-qr/angular-qr.js"></script>
+    <!-- bootstrap modules -->
     <script src="bower_components/bootstrap/js/affix.js"></script>
     <script src="bower_components/bootstrap/js/alert.js"></script>
     <script src="bower_components/bootstrap/js/button.js"></script>
@@ -123,14 +93,6 @@
     <script src="bower_components/bootstrap/js/tooltip.js"></script>
     <script src="bower_components/bootstrap/js/popover.js"></script>
     <script src="bower_components/bootstrap-slider/js/bootstrap-slider.js"></script>
-    <!-- endbuild -->
-
-    <!-- build:js scripts/modules.js -->
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
-    <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
-    <script src="bower_components/angular-qr/angular-qr.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
