--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,10 @@
       </p>
     </div>
 
-    <!-- Feedback modal -->
+    <!-- Feedback -->
+    <a href="" class="btn btn-default btn-feedback"
+       data-toggle="modal"
+       data-target=".feedbackmodal">Feedback</a>
     <ng-include src="'views/modal.feedback.html'"></ng-include>
 
     <!-- build:js scripts/libs.js -->
