Normalize passphrase with NKFD

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="bower_components/jquery.atmosphere/jquery.atmosphere.js"></script>
     <script src="bower_components/bitcoinjs-lib/build/bitcoinjs-min.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.js"></script>
+    <script src="bower_components/unorm/lib/unorm.js"></script>
     <script src="bower_components/trezor.js/trezor.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <!-- angular modules -->
