QR code scanning in send screen
- FIXME: subtle bug with 2nd or 3rd scanning - watch listener never fires

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,24 @@
     <script src="bower_components/unorm/lib/unorm.js"></script>
     <script src="bower_components/trezor.js/trezor.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <!-- jsqrcode -->
+    <script src="bower_components/jsqrcode/src/grid.js"></script>
+    <script src="bower_components/jsqrcode/src/version.js"></script>
+    <script src="bower_components/jsqrcode/src/detector.js"></script>
+    <script src="bower_components/jsqrcode/src/formatinf.js"></script>
+    <script src="bower_components/jsqrcode/src/errorlevel.js"></script>
+    <script src="bower_components/jsqrcode/src/bitmat.js"></script>
+    <script src="bower_components/jsqrcode/src/datablock.js"></script>
+    <script src="bower_components/jsqrcode/src/bmparser.js"></script>
+    <script src="bower_components/jsqrcode/src/datamask.js"></script>
+    <script src="bower_components/jsqrcode/src/rsdecoder.js"></script>
+    <script src="bower_components/jsqrcode/src/gf256poly.js"></script>
+    <script src="bower_components/jsqrcode/src/gf256.js"></script>
+    <script src="bower_components/jsqrcode/src/decoder.js"></script>
+    <script src="bower_components/jsqrcode/src/qrcode.js"></script>
+    <script src="bower_components/jsqrcode/src/findpat.js"></script>
+    <script src="bower_components/jsqrcode/src/alignpat.js"></script>
+    <script src="bower_components/jsqrcode/src/databr.js"></script>
     <!-- angular modules -->
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
