--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
     <script src="scripts/services/trezorService.js"></script>
     <script src="scripts/services/TrezorDevice.js"></script>
     <script src="scripts/services/TrezorBackend.js"></script>
+    <script src="scripts/services/TrezorBranch.js"></script>
     <script src="scripts/services/TrezorAccount.js"></script>
     <script src="scripts/controllers/nav.js"></script>
     <script src="scripts/controllers/main.js"></script>
