--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
     <script src="bower_components/jsqrcode/src/databr.js"></script>
     <!-- angular modules -->
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
