--- a/app/index.html
+++ b/app/index.html
@@ -134,6 +134,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/device.js"></script>
     <script src="scripts/controllers/account.js"></script>
+    <script src="scripts/templates.js"></script>
     <!-- endbuild -->
   </body>
 </html>
