--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,9 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/device.js"></script>
     <script src="scripts/controllers/account.js"></script>
-    <script src="scripts/templates.js"></script>
+
+    <script src="scripts/templates.webwallet.js"></script>
+    <script src="scripts/templates.error.js"></script>
     <!-- endbuild -->
   </body>
 </html>
