Rework the init process
- do not request MPK
- show first account right away
- jump on the dev screen after setup/load/recovery
- checks for connected device are independent of the loading state now
- make sure the devinit/accinit workflow is clear
- introduce lodash as a dependency, remove collection fns from utils

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
     <ng-include src="'views/modal.feedback.html'"></ng-include>
 
     <!-- build:js scripts/libs.js -->
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jquery.atmosphere/jquery.atmosphere.js"></script>
     <script src="bower_components/bitcoinjs-lib/build/bitcoinjs-min.js"></script>
