Switch to bower-atmosphere

--- a/app/index.html
+++ b/app/index.html
@@ -80,12 +80,12 @@
     <!-- build:js scripts/libs.js -->
     <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/jquery.atmosphere/jquery.atmosphere.js"></script>
     <script src="bower_components/bitcoinjs-lib/build/bitcoinjs-min.js"></script>
     <script src="bower_components/trezor.js/dist/trezor.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.js"></script>
     <script src="bower_components/unorm/lib/unorm.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/atmosphere/atmosphere.js"></script>
     <!-- jsqrcode -->
     <script src="bower_components/jsqrcode/src/grid.js"></script>
     <script src="bower_components/jsqrcode/src/version.js"></script>
