--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/services/bip39.js"></script>
     <script src="scripts/services/utils.js"></script>
     <script src="scripts/services/slider.js"></script>
