--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trezor Web Wallet</title>
-    <meta name="description" content="Trezor Web Wallet">
+    <title>myTREZOR Web Wallet</title>
+    <meta name="description" content="myTREZOR Web Wallet">
     <meta name="viewport" content="width=device-width">
 
     <!-- build:css({.tmp,app}) styles/styles.css -->
@@ -29,13 +29,13 @@
     <div class="page-header navbar navbar-inverse navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/"><img src="images/logo.png" height="45" alt="TREZOR Web Wallet"></a>
+          <a class="navbar-brand" href="/"><img src="images/logo.png" height="45" alt="myTREZOR Web Wallet"></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">My Wallet</a></li>
-          <li><a href="#">How To</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Support</a></li>
+          <li class="active"><a href="#">Wallet</a></li>
+          <li><a target="_blank" href="http://www.bitcointrezor.com/news/">News</a></li>
+          <li><a target="_blank" href="http://www.bitcointrezor.com/faq/">FAQ</a></li>
+          <li><a target="_blank" href="mailto:support@bitcointrezor.com">Support</a></li>
         </ul>
       </div>
     </div>
