Disable feedback button

--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,10 @@
     </div>
 
     <!-- Feedback -->
-    <a href="" class="btn btn-default btn-feedback"
+    <!-- <a href="" class="btn btn-default btn-feedback"
        data-toggle="modal"
        data-target=".feedbackmodal">Feedback</a>
-    <ng-include src="'views/modal.feedback.html'"></ng-include>
+    <ng-include src="'views/modal.feedback.html'"></ng-include> -->
 
     <!-- build:js scripts/libs.js -->
     <script src="bower_components/lodash/dist/lodash.js"></script>
