--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,11 @@
         </div>
       </div>
 
+      <!-- Feedback -->
+      <a href="" class="btn btn-default btn-feedback"
+         data-toggle="modal"
+         data-target=".feedbackmodal">Feedback</a>
+      <ng-include src="'views/modal.feedback.html'"></ng-include>
     </div>
 
     <!-- Error Application -->
@@ -70,12 +75,6 @@
 
     <div class="page-footer">
     </div>
-
-    <!-- Feedback -->
-    <!-- <a href="" class="btn btn-default btn-feedback"
-       data-toggle="modal"
-       data-target=".feedbackmodal">Feedback</a>
-    <ng-include src="'views/modal.feedback.html'"></ng-include> -->
 
     <!-- build:js scripts/libs.js -->
     <script src="bower_components/lodash/dist/lodash.js"></script>
