--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/device.js"></script>
     <script src="scripts/controllers/account.js"></script>
+    <script src="scripts/controllers/error.js"></script>
 
     <script src="scripts/templates.webwallet.js"></script>
     <script src="scripts/templates.error.js"></script>
