add credits to footer

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,8 @@
     </div>
 
     <div class="page-footer">
+      Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a><br />
+      Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
     </div>
 
     <!-- build:js scripts/libs.js -->
