--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +21,8 @@
     <div class="page-header navbar navbar-inverse navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/"><img src="images/logo.png" height="45" alt="myTREZOR Web Wallet"></a>
+          <a class="navbar-brand" href="/"
+            ><img src="images/logo.png" height="45" alt="myTREZOR Web Wallet"></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Wallet</a></li>
