--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,11 @@
   </head>
   <body>
     <!--[if lt IE 9]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com">upgrade your browser</a> to improve your experience.</p>
+      <div class="browsehappy alert alert-warning">
+        <h4>You are using an <strong>outdated</strong> browser.</h4>
+        Please <a href="http://browsehappy.com">upgrade your browser</a>
+        to improve your experience.
+      </div>
     <![endif]-->
 
     <div class="page-header navbar navbar-inverse navbar-static-top">
@@ -92,23 +96,15 @@
     <script src="bower_components/jsqrcode/src/alignpat.js"></script>
     <script src="bower_components/jsqrcode/src/databr.js"></script>
     <!-- angular modules -->
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-strap/dist/angular-strap.js"></script>
-    <script src="bower_components/angular-strap/dist/angular-strap.tpl.js"></script>
     <script src="bower_components/angular-qr/angular-qr.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- bootstrap modules -->
-    <script src="bower_components/bootstrap/js/affix.js"></script>
     <script src="bower_components/bootstrap/js/alert.js"></script>
     <script src="bower_components/bootstrap/js/button.js"></script>
-    <script src="bower_components/bootstrap/js/carousel.js"></script>
     <script src="bower_components/bootstrap/js/transition.js"></script>
-    <script src="bower_components/bootstrap/js/collapse.js"></script>
     <script src="bower_components/bootstrap/js/dropdown.js"></script>
     <script src="bower_components/bootstrap/js/modal.js"></script>
-    <script src="bower_components/bootstrap/js/scrollspy.js"></script>
-    <script src="bower_components/bootstrap/js/tab.js"></script>
     <script src="bower_components/bootstrap/js/tooltip.js"></script>
     <script src="bower_components/bootstrap/js/popover.js"></script>
     <script src="bower_components/bootstrap-slider/js/bootstrap-slider.js"></script>
@@ -117,6 +113,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
+    <!-- services -->
     <script src="scripts/services/bip39.js"></script>
     <script src="scripts/services/utils.js"></script>
     <script src="scripts/services/slider.js"></script>
@@ -127,12 +124,24 @@
     <script src="scripts/services/TrezorBackend.js"></script>
     <script src="scripts/services/TrezorBranch.js"></script>
     <script src="scripts/services/TrezorAccount.js"></script>
+    <!-- directives -->
+    <script src="scripts/directives/flashMessages.js"></script>
+    <script src="scripts/directives/qrScan.js"></script>
+    <script src="scripts/directives/focus.js"></script>
+    <!-- controllers -->
     <script src="scripts/controllers/nav.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/device.js"></script>
+    <script src="scripts/controllers/device.load.js"></script>
+    <script src="scripts/controllers/device.recovery.js"></script>
+    <script src="scripts/controllers/device.setup.js"></script>
+    <script src="scripts/controllers/device.wipe.js"></script>
     <script src="scripts/controllers/account.js"></script>
+    <script src="scripts/controllers/account.receive.js"></script>
+    <script src="scripts/controllers/account.send.js"></script>
+    <script src="scripts/controllers/modal.pin.js"></script>
     <script src="scripts/controllers/error.js"></script>
-
+    <!-- compiled templates -->
     <script src="scripts/templates.webwallet.js"></script>
     <script src="scripts/templates.error.js"></script>
     <!-- endbuild -->
