info@bitcointrezor.com -> support@bitcointrezor.com

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
           <li class="active"><a href="#">Wallet</a></li>
           <li><a target="_blank" href="http://www.bitcointrezor.com/news/">News</a></li>
           <li><a target="_blank" href="http://www.bitcointrezor.com/faq/">FAQ</a></li>
-          <li><a href="mailto:info@bitcointrezor.com">Support</a></li>
+          <li><a href="mailto:support@bitcointrezor.com">Support</a></li>
         </ul>
       </div>
     </div>
