--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
            ng-if="optionalFirmware">
         <div class="container">
           <strong>New TREZOR firmware is available.</strong>
-          Upgrade for newest features and bug fixes.
+          Upgrade for the newest features and bug fixes.
           <button class="btn btn-sm btn-warning"
                   ng-click="optionalFirmware.update()">Show details</button>
         </div>
