Link to user manual rather than FAQ

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Wallet</a></li>
           <li><a target="_blank" href="http://satoshilabs.com/news/">News</a></li>
-          <li><a target="_blank" href="http://bitcointrezor.com/faq/">FAQ</a></li>
+          <li><a target="_blank" href="http://doc.satoshilabs.com">Help</a></li>
           <li><a href="mailto:support@bitcointrezor.com">Support</a></li>
         </ul>
       </div>
