Handle Bitcoin URI -- fill the Send Bitcoins form.

--- a/app/index.html
+++ b/app/index.html
@@ -134,6 +134,7 @@
     <script src="scripts/services/TrezorDevice.js"></script>
     <script src="scripts/services/TrezorBackend.js"></script>
     <script src="scripts/services/TrezorAccount.js"></script>
+    <script src="scripts/services/uriRedirect.js"></script>
     <!-- directives -->
     <script src="scripts/directives/flashMessages.js"></script>
     <script src="scripts/directives/qrScan.js"></script>
