--- a/app/index.html
+++ b/app/index.html
@@ -76,8 +76,8 @@
       <ng-include src="'views/error.html'">
     </div>
 
-    <div class="page-footer">
-      Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a><br />
+    <div class="page-footer container">
+      Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a><br>
       Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
     </div>
 
