--- a/app/index.html
+++ b/app/index.html
@@ -178,6 +178,8 @@
     <script src="bower_components/bootstrap/js/tooltip.js"></script>
     <script src="bower_components/bootstrap/js/popover.js"></script>
     <script src="bower_components/bootstrap-slider/js/bootstrap-slider.js"></script>
+    <!-- others -->
+    <script src="bower_components/comma-separated-values/csv.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
