--- a/app/index.html
+++ b/app/index.html
@@ -123,11 +123,13 @@
         </div>
       </div>
 
-    <div class="page-footer container">
-      Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a><br>
-      Backend powered by
-      <a href="https://bitsofproof.com/?page_id=826" target="_blank"
-         ><img src="/images/bitsofproof.png" height="24" alt="Bits of Proof"></a>
+      <div class="page-footer container">
+        Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
+        Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
+        <span class="pull-right">
+            <ng-include src="'views/debug.link.html'"></ng-include>
+        </span>
+      </div>
     </div>
 
     <!-- override window.console -->
