--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,9 @@
 
     <div class="page-footer container">
       Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a><br>
-      Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
+      Backend powered by
+      <a href="https://bitsofproof.com/?page_id=826" target="_blank"
+         ><img src="/images/bitsofproof.png" height="24" alt="Bits of Proof"></a>
     </div>
 
     <!-- build:js scripts/libs.js -->
