--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
             <strong>New TREZOR firmware is available.</strong>
             Upgrade for the newest features and bug fixes.
             <button class="btn btn-sm btn-warning"
-                ng-click="optionalFirmware.update()">Show details</button>
+                    ng-click="optionalFirmware.update()">Show details</button>
           </div>
         </div>
 
@@ -99,16 +99,16 @@
             <div class="page-content col-md-9">
               <flash-messages>
                 <div ng-repeat="m in messages"
-                  ng-switch="m.level">
+                     ng-switch="m.level">
                   <div class="alert alert-flash alert-danger"
-                    ng-switch-when="error">
+                       ng-switch-when="error">
                     <h4 class="text-capitals">{{m.level}}!</h4>
                     {{m.text}}
                     <span ng-if="m.html" ng-bind-html="m.html"></span>
                     <ng-include src="'views/debug.button.html'"></ng-include>
                   </div>
                   <div class="alert alert-flash alert-{{m.level}}"
-                    ng-switch-default>
+                       ng-switch-default>
                     <h4 class="text-capitals">{{m.level}}</h4>
                     {{m.text}}
                     <span ng-if="m.html" ng-bind-html="m.html"></span>
@@ -124,10 +124,14 @@
       </div>
 
       <div class="page-footer container">
-        Copyright &copy; 2014 <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
-        Backend powered by <a href="https://bitsofproof.com/?page_id=826" target="_blank">Bits of Proof</a>
+        Copyright &copy; 2014
+        <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
+        Backend powered by
+        <a href="https://bitsofproof.com/?page_id=826" target="_blank"
+           >Bits of Proof</a>
+
         <span class="pull-right">
-            <ng-include src="'views/debug.link.html'"></ng-include>
+          <ng-include src="'views/debug.link.html'"></ng-include>
         </span>
       </div>
     </div>
