Fix the app error state

--- a/app/index.html
+++ b/app/index.html
@@ -217,8 +217,7 @@
     <script src="scripts/controllers/account/send.js"></script>
     <script src="scripts/controllers/modal/pin.js"></script>
     <!-- compiled templates -->
-    <script src="scripts/templates.webwallet.js"></script>
-    <script src="scripts/templates.error.js"></script>
+    <script src="scripts/templates.js"></script>
     <!-- endbuild -->
   </body>
 </html>
