Fix BoP logo in footer

--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
         <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
         Backend powered by
         <a href="https://bitsofproof.com/?page_id=826" target="_blank"
-           >Bits of Proof</a>
+           ><img src="/images/bitsofproof.png" height="24" alt="Bits of Proof"></a>
 
         <span class="pull-right">
           <ng-include src="'views/debug.link.html'"></ng-include>
