--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,8 @@
     <script src="scripts/controllers/account/account.js"></script>
     <script src="scripts/controllers/account/receive.js"></script>
     <script src="scripts/controllers/account/send.js"></script>
+    <script src="scripts/controllers/account/sign.js"></script>
+    <script src="scripts/controllers/account/verify.js"></script>
     <script src="scripts/controllers/modal/pin.js"></script>
     <!-- compiled templates -->
     <script src="scripts/templates.js"></script>
