--- a/app/index.html
+++ b/app/index.html
@@ -207,6 +207,7 @@
     <script src="scripts/controllers/nav.js"></script>
     <script src="scripts/controllers/import.js"></script>
     <script src="scripts/controllers/device/device.js"></script>
+    <script src="scripts/controllers/device/info.js"></script>
     <script src="scripts/controllers/device/load.js"></script>
     <script src="scripts/controllers/device/recovery.js"></script>
     <script src="scripts/controllers/device/setup.js"></script>
