--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Wallet</a></li>
+          <li><a target="_blank" href="http://bitcointrezor.com/">What is TREZOR?</a></li>
           <li><a target="_blank" href="http://satoshilabs.com/news/">News</a></li>
           <li><a target="_blank" href="http://doc.satoshilabs.com/trezor-user/">Help</a></li>
           <li><a href="mailto:support@bitcointrezor.com">Support</a></li>
