add gitrev to footer, improve Dockerfile

--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
       </div>
 
       <div class="page-footer container">
-        Copyright &copy; 2014
+        Copyright &copy; <span title="@@GITREV@@">2013-2015</span>
         <a href="http://satoshilabs.com/" target="_blank">SatoshiLabs</a> |
         Backend powered by
         <a href="https://bitsofproof.com/?page_id=826" target="_blank"
