--- a/app/index.html
+++ b/app/index.html
@@ -204,6 +204,7 @@
     <script src="scripts/services/TrezorBackend.js"></script>
     <script src="scripts/services/TrezorAccount.js"></script>
     <script src="scripts/services/uriRedirect.js"></script>
+    <script src="scripts/services/modalOpener.js"></script>
     <!-- directives -->
     <script src="scripts/directives/flashMessages.js"></script>
     <script src="scripts/directives/qrScan.js"></script>
